Added placeholder text for bug diversity subsection

--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -76,6 +76,11 @@ Cells for which there were no samples are indicated with the contents '--'.}
 \label{table:yield-breakdown}
 \end{table}
 
+\subsection{Bug Diversity}
+It would appear as though LAVA can inject a very large number of bugs.  
+If we extrapolate from yield numbers in Table~\ref{table:insertion-results}, we estimate there are over 400,000 validated bugs.
+  But how diverse is this set of bugs?
+
 \subsection{Bug Realism}
 
 \begin{figure}
@@ -122,6 +127,8 @@ The histogram in Figure~\ref{fig:rdf-hist} quantifies this effect for all potent
 \caption{Fraction of trace with perfectly normal or realistic data flow, $I(DUA)/I(ATP)$}
 \label{fig:rdf-hist}
 \end{figure}
+
+
 
 
 \subsection{Vulnerability Discovery Tool Evaluation}
