--- a/paper1/overview.tex
+++ b/paper1/overview.tex
@@ -2,8 +2,9 @@
 At a high level, LAVA adds bugs to programs in the following manner.
 
 \begin {enumerate}
-\item Identify source code locations where input bytes that do not determine control flow and are still close to their original form are available. 
-We call these quantities DUAs, for \underline{D}ead, \underline{U}ncomplicated and \underline{A}vailable data. 
+\item Identify execution trace locations where input bytes that do not determine control flow and have not been modified much are available. 
+We call these quantities DUAs, for \underline{D}ead, \underline{U}ncomplicated and \underline{A}vailable data.
+We can correspond these bytes back to their locations in the source code, and we later use this information to locate injection opportunities.
 \item Find potential attack points that are temporally after a DUA in the program trace.
 Attack points are source code locations where a DUA might be used, if only it were available there as well, to make a program vulnerable. 
 \item Add code to the program to make the DUA value available at the attack point and use it to trigger the vulnerability. 
@@ -29,7 +30,7 @@ That taint analysis has a few important features.
 \begin{itemize}
 \item Each byte in the input is given its own label.
 Thus, if an internal program quantity is tainted and a direct copy of input bytes, then we can map that quantity back to a specific part of the input.  
-\item The taint analysis operates, effectively, upon an LLVM version of the machine code for a program, including its libraries.
+\item The taint analysis operates, effectively, upon an LLVM-lifted version of the machine code for a program, including its libraries.
 This means taint is propagated accurately and completely, even through esoteric x86 machine instructions like MMX and XMM.
 \item The taint analysis keeps track of a \emph{set} of labels per byte of program data, meaning that it can represent computation that mixes input bytes.
 \end{itemize}
@@ -54,7 +55,7 @@ If TCN is 0, the quantity is a direct copy of input bytes.
 The intuition behind this measure is that we need DUAs that are computationally close to the input in order to be able to use them with predictable results.
 Note that TCN is not an ideal measure.
 There are obviously situations in which the tree of computation is deep but the resulting value is both completely predictable and has as much entropy as the original value.
-However, TCN has the advantage that it is easy to compute.
+However, TCN has the advantage that it is easy to compute locally, for each instruction.
 Whenever the taint system needs to union label sets to represent computation, the TCN associated with the resulting set is one more than the max of those of the 
 input sets.
 In the running example, and illustrated in Figure~\ref{fig:taint-compute-number}, $TCN(c)=1$ after line 1, since it is computed from quantities \verb+a+ and \verb+b+ which are directly derived from input.
@@ -80,8 +81,9 @@ making it an ideal trigger to control a vulnerability.
 \subsection {The attack point}
 
 Attack point selection is a function of the type of vulnerability to be injected.
-All that is required is that it must be possible to inject a bug at the attack point by making use of dead data made available somehow.
-Obviously, this means that the attack point must be \emph{temporally after} a DUA in the trace.
+All that is required is that it must be possible to inject a bug at the attack point by making use of dead data.
+This data can be made available later in the trace via induced dataflow.
+Obviously, this means that the attack point must be \emph{temporally after} an appearance of a DUA in the trace.
 If the goal is to inject a read overflow, then reads via pointer dereference, array index, and bulk memory copy, e.g., are reasonable attack points.  
 If the goal is to inject divide-by-zero, then arithmetic operations involving division will be attacked. 
 Alternately, the goal might be to control one or more arguments to a library function.
@@ -96,13 +98,3 @@ If it is not in scope, new code is added to siphon the DUA off into a safe place
 However, in order to ensure that the bug only manifest itself very occasionally (one of our requirements from Section~\ref{sec:motivation}), we must add a guard requiring that the DUA match a specific value if it is to be used to manifest the vulnerability.
 In the running example, the DUA \verb+b+ is still in scope at the \verb+memcpy+ attack point and the only source code modification necessary is to make use of it to introduce the vulnerability if it matches a particular value.  
 If we replace the first argument to the call to \verb+memcpy+, \verb+d+, with \verb-d+(b==0x6c617661)*b- then there will be an out of bounds write only when bytes 4..7 of the input exactly match 0x6c617661. 
-
-
-
-
-
-
-
-
-
-
