--- a/paper1/paper.tex
+++ b/paper1/paper.tex
@@ -3,7 +3,7 @@
 \usepackage{epsfig,graphicx,subcaption}
 % \usepackage[hyphens]{url}
 \usepackage{hyperref}
-
+\usepackage{amsmath}
 
 %\documentclass[a4paper,10pt]{article}
 \usepackage[utf8]{inputenc}
