--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -2,14 +2,14 @@
 
 \begin{table*}[t!]
 \centering
-\begin{tabular}{c|c|c|c|c|c|c|c|c|c} 
-        &         & Lines    &        &        & Potential & Validated  &         & Inj Time \\
-Name    & Version & C code   & N(DUA) & N(ATP) & Bugs      & Bugs       & Yield   & (sec)  \\\hline
-file    & 5.22    & 12927    & 631    & 114    & 17518     & 774        & 38.7\%  & 14         \\
-%eog    & 3.4.2   & 22997    &        &        &           &            &         &         \\ 
-bash    & 4.3     & 98871    & 3832   & 604    & 447645    & 192        & 9.6\%   & 281     \\
-readelf & 2.25    & 1327513  & 3849   & 266    & 276367    & 1064       & 53.2 \% & 344     \\
-tshark  & 1.8.2   & 2186252  & 9853   & 1037   & 1240777   & 354        & 17.7\%  & 542     \\
+\begin{tabular}{c|c|c|c|c|c|c|c|c|c|c} 
+        &         & Num       & Lines     &        &        & Potential & Validated  &         & Inj Time \\
+Name    & Version & Src Files & C code    & N(DUA) & N(ATP) & Bugs      & Bugs       & Yield   & (sec)  \\\hline
+file    & 5.22    & 19        & 10809     & 631    & 114    & 17518     & 774        & 38.7\%  & 14         \\  %    files verified.  sloc recomputed
+%eog    & 3.4.2   &           & 22997     &        &        &           &            &         &         \\ 
+bash    & 4.3     & 143       & 98871     & 3832   & 604    & 447645    & 192        & 9.6\%   & 153     \\  % time verified.  
+readelf & 2.25    & 12        & 21052     & 3849   & 266    & 276367    & 1064       & 53.4 \% & 354     \\  % time verified.  files verified. sloc recomputed
+tshark  & 1.8.2   & 1481      & 2186252   & 9853   & 1037   & 1240777   & 354        & 17.7\%  & 542     \\
 \end{tabular} 
 \caption{LAVA Injection results for open source programs of various sizes.
 For each, a single input file was used to perform a taint analysis with PANDA.
@@ -52,16 +52,7 @@ As the injected bug is designed to be triggered only if a particular set of four
 We did not encounter any situation in which the original input caused an overflow.
 
 
-Yield varies considerably from a 9.6\% to over 50\%.
-To understand this better, we investigated the relationship between our two taint-based measures and yield.
-For each DUA used to inject a bug, we determined $mTCN$, the maximum TCN for any of its bytes and $mLIV$, the maximum liveness for any label in any taint set associated with one of its bytes.  
-More informally, $mTCN$ represents how complicated a function of the input bytes a DUA is, and $mLIV$ is a measure of how much the control flow of a program is influenced by the input bytes that determine a DUA.
-Table~\ref{table:yield-breakdown} is a two-dimensional histogram with the bins for $mTCN$ intervals along the vertical axis and bins for $mLIV$ along the horizontal axis.
-The top-left cell of this table represents all bug injections for which $mTCN<10$ and $mLIV<10$, and the bottom-right cell is all those for which $mTCN>=1000$ and $mLIV>=1000$.
-Recall that, when  $mTCN=mLIV=0$, the DUA is not only a direct copy of input bytes, but also, those input bytes have not been observed to be used in deciding any program branches. 
-As either $mTCN$ or $mLIV$ increase, yield deteriorates.  
-
-\begin{table}
+\begin{table}[b]
 \centering
 \begin{tabular}{l|l|l|l|l} 
        & \multicolumn{3}{c}{$mLIV$} &  \\  
@@ -71,15 +62,41 @@ $[10,100)$ &     --       & 0          & 0            & 0     \\
 $[100,+\inf]$ &  --       & --         & --           & 0     \\ 
 \end{tabular}
 \caption{Yield as a function of both $mLIV$ and $mTCN$.  
-Yield is highest for DUAs with low values for both of these measures, i.e., that are both an uncomplicated function of input bytes and also that do not derive from input bytes that are used to decide program control flow.
+Yield is highest for DUAs with low values for both of these measures, i.e., that are both a relatively uncomplicated function of input bytes and also that derive from input bytes involved in deciding fewer branches.
 Cells for which there were no samples are indicated with the contents '--'.}
 \label{table:yield-breakdown}
 \end{table}
 
-\subsection{Bug Diversity}
+Yield varies considerably from a 9.6\% to over 50\%.
+To understand this better, we investigated the relationship between our two taint-based measures and yield.
+For each DUA used to inject a bug, we determined $mTCN$, the maximum TCN for any of its bytes and $mLIV$, the maximum liveness for any label in any taint set associated with one of its bytes.  
+More informally, $mTCN$ represents how complicated a function of the input bytes a DUA is, and $mLIV$ is a measure of how much the control flow of a program is influenced by the input bytes that determine a DUA.
+Table~\ref{table:yield-breakdown} is a two-dimensional histogram with the bins for $mTCN$ intervals along the vertical axis and bins for $mLIV$ along the horizontal axis.
+The top-left cell of this table represents all bug injections for which $mTCN<10$ and $mLIV<10$, and the bottom-right cell is all those for which $mTCN>=1000$ and $mLIV>=1000$.
+Recall that, when  $mTCN=mLIV=0$, the DUA is not only a direct copy of input bytes, but also, those input bytes have not been observed to be used in deciding any program branches. 
+As either $mTCN$ or $mLIV$ increase, yield deteriorates.  
+
+
+\subsection{Bug Distribtion}
 It would appear as though LAVA can inject a very large number of bugs.  
-If we extrapolate from yield numbers in Table~\ref{table:insertion-results}, we estimate there are over 400,000 validated bugs.
-  But how diverse is this set of bugs?
+If we extrapolate from yield numbers in Table~\ref{table:insertion-results}, we estimate there are over 400,000 real bugs.
+
+  $ 0.387 \times 17518 + 0.096 \times 447645 + 0.532 \times 276367 \\
+   + 0.177 \times 1240777 \approx 416398 $ 
+
+\noindent
+But how well distributed is this set of bugs? 
+For programs like \verb+file+ and \verb+bash+, between 11 and 44 source files  are involved in a potential bug.
+In this case, the bugs appear to be fairly well distributed, as those numbers represent 58\% and 31\% of the total for each, respectively.
+On the other hand, \verb+readelf+ and \verb+tshark+ fare worse, with only 2 and 122 source files found to involve a potential bug for each (0.87\% and 8.2\% of source files).
+For \verb+readelf+ there appear to be two issues. 
+First, we over-estimate the number of source files for this program, since we include all of binutils.
+The second issue 
+For \verb+tshark+, much of the code for which is devoted to parsing esoteric network protocols, coverage is probably the issue since we use only a single input.
+Similiary, we only use a single hand-written script with \verb+bash+, with little attempt to cover a majority of language features.
+
+ 
+
 
 \subsection{Bug Realism}
 
