--- a/paper1/motivation.tex
+++ b/paper1/motivation.tex
@@ -18,11 +18,11 @@ While this state of affairs is perfectly understandable, given the scarcity of g
 There is currently no way to measure fundamental figures of merit such as miss and false alarm rate for a bug finding tool.
 
 We propose the following requirements for bugs in a vulnerability corpus, if it is to be useful for research, development, and evaluation.
-Bugs must be
+Bugs must
 \begin{enumerate}
-\item Cheap and plentiful
+\item Be cheap and plentiful
 \item Span the execution lifetime of a program
-\item Embedded in representative control and data flow
+\item Be embedded in representative control and data flow
 \item Come with an input that serves as an existence proof 
 \item Manifest for a very small fraction of possible inputs
 \end {enumerate}
