Start fixing citations.

--- a/paper1/biblio.bib
+++ b/paper1/biblio.bib
@@ -1,13 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-
-%% Created for Brendan Dolan-Gavitt at 2015-09-23 17:35:58 -0400 
+%% Created for Hulin, Patrick - 0559 - MITLL at 2015-10-08 13:59:35 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@techreport{PANDA,
+	Author = {Dolan-Gavitt, Brendan and Hodosh, Joshua and Hulin, Patrick and Leek, Timothy and Whelan, Ryan},
+	Date-Added = {2015-10-08 17:56:44 +0000},
+	Date-Modified = {2015-10-08 17:59:35 +0000},
+	Institution = {Columbia University},
+	Number = {23},
+	Title = {Repeatable Reverse Engineering for the Greater Good with PANDA},
+	Type = {CUCS},
+	Year = {2014}}
 
 @techreport{Juliet:2012,
 	Author = {{Center for Assured Software}},
@@ -130,3 +139,14 @@
 	Year = {2004},
 	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1029894.1029911},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1029894.1029911}}
+
+@webpage{Tsyrklevich:2015,
+	Author = {Vlad Tsyrklevich},
+	Date-Modified = {2015-10-08 17:53:55 +0000},
+	Howpublished = {Blog post},
+	Lastchecked = {8 October 2015},
+	Month = {July},
+	Title = {Hacking Team: A Zero-Day Market Case Study},
+	Url = {https://tsyrklevich.net/2015/07/22/hacking-team-0day-market/},
+	Year = {2015},
+	Bdsk-Url-1 = {https://tsyrklevich.net/2015/07/22/hacking-team-0day-market/}}
