--- a/paper1/biblio.bib
+++ b/paper1/biblio.bib
@@ -1,12 +1,20 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Hulin, Patrick - 0559 - MITLL at 2015-10-08 13:59:35 -0400 
+%% Created for Hulin, Patrick - 0559 - MITLL at 2015-10-08 14:53:04 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@inproceedings{S2E,
+	Author = {Chipounov, Vitaly and Kuznetsov, Volodymyr and Candea, George},
+	Booktitle = {Architectural Support for Programming Languages and Operating Systems},
+	Date-Added = {2015-10-08 18:51:06 +0000},
+	Date-Modified = {2015-10-08 18:53:00 +0000},
+	Title = {S2E: A Platform for In-Vivo Multi-Path Analysis of Software Systems},
+	Year = {2011}}
 
 @techreport{PANDA,
 	Author = {Dolan-Gavitt, Brendan and Hodosh, Joshua and Hulin, Patrick and Leek, Timothy and Whelan, Ryan},
