Correct a bunch of typos.

--- a/paper1/altdesign.tex
+++ b/paper1/altdesign.tex
@@ -15,4 +15,4 @@ This would limit the number of bugs that could be added to a program.
 
 By contrast, the approach taken by LAVA is computationally cheap---its most expensive step is a dynamic taint analysis, which only needs to be done once per input file. 
 Each bug is guaranteed to come with a triggering input. 
-And in our experiments, we demonstrate that even a single input file can yield thousands of bugs spread throughout a moderately complex program such as \texttt{tshark}.
+In our experiments, we demonstrate that even a single input file can yield thousands of bugs spread throughout a complex program such as \texttt{tshark}.
