--- a/paper1/implementation.tex
+++ b/paper1/implementation.tex
@@ -2,8 +2,8 @@
 \begin{figure}
 \centering
 \includegraphics[width=3in]{lava-arch.pdf}
-\caption{LAVA Implementation Architecture.  PANDA and CLANG are used to perform a dynamic taint analysis which identifies potential bug injections as DUA attack point pairs.
-Each of these is validated with a corresponding source code change performed by CLANG as well.
+\caption{LAVA Implementation Architecture.  PANDA and Clang  are used to perform a dynamic taint analysis which identifies potential bug injections as DUA attack point pairs.
+Each of these is validated with a corresponding source code change performed by Clang  as well.
 Finally, every potentially buggy binary is tested against a targeted input change to determine if a buffer overflow actually results.}
 \label{fig:lava-impl}
 \end{figure}
@@ -25,10 +25,10 @@ LAVA's taint queries rely on the PANDA dynamic analysis platform~\cite{PANDA}, w
 PANDA augments Qemu in three important ways.
 First, it introduces deterministic record and replay, which can be used for iterated and expensive analyses that cannot be performed online.
 Second, it has a simple but powerful plugin architecture that allows for powerful analyses to be built and even built upon one another.
-Third, it integrates, from S2E~\cite{S2E}, the ability to lift Qemu's intermediate language to LLVM for analysis.
+Third, it integrates, from S2E~\cite{S2E}, the ability to lift QEMU's intermediate language to LLVM for analysis.
 The main feature of PANDA used by LAVA is a fast and robust dynamic taint analysis plugin that works upon the LLVM version of each 
 basic block of emulated code.
-PANDA's taint analysis additionally uses CLANG to ensure that even uncommon, complex processor instructions implemented in C, rather than in the IL, are also lifted to LLVM and made part of the taint analysis.
+This LLVM version includes emulated versions of every x86 instruction that QEMU supports.
 LAVA employes a simple PANDA plugin \verb+file_taint+ that is able to apply taint labels to bytes read from files in Linux.
 This plugin, in turn, leverages operating system introspection and system call plugins in PANDA to determine the start file offset of the read as well as the number of byte actually read.
 This is how LAVA can make use of taint information that maps internal program quantities back to file offsets.  
