--- a/paper1/biblio.bib
+++ b/paper1/biblio.bib
@@ -148,7 +148,8 @@
 	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1029894.1029911},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1029894.1029911}}
 
-@webpage{Tsyrklevich:2015,
+
+@webpage{Tsyrklevich2015,
 	Author = {Vlad Tsyrklevich},
 	Date-Modified = {2015-10-08 17:53:55 +0000},
 	Howpublished = {Blog post},
@@ -158,3 +159,10 @@
 	Url = {https://tsyrklevich.net/2015/07/22/hacking-team-0day-market/},
 	Year = {2015},
 	Bdsk-Url-1 = {https://tsyrklevich.net/2015/07/22/hacking-team-0day-market/}}
+
+@inproceedings{kratkiewicz2005,
+  title={Using a diagnostic corpus of C programs to evaluate buffer overflow detection by static analysis tools},
+  author={Kratkiewicz, Kendra and Lippmann, Richard},
+  booktitle={Proc. of Workshop on the Evaluation of Software Defect Detection Tools},
+  year={2005}
+}
