--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -77,7 +77,8 @@ Recall that, when  $mTCN=mLIV=0$, the DUA is not only a direct copy of input byt
 As either $mTCN$ or $mLIV$ increase, yield deteriorates.  
 
 
-\subsection{Bug Distribtion}
+\subsection{Bug Distribution}
+
 It would appear as though LAVA can inject a very large number of bugs.  
 If we extrapolate from yield numbers in Table~\ref{table:insertion-results}, we estimate there are over 400,000 real bugs.
 
@@ -148,9 +149,9 @@ The histogram in Figure~\ref{fig:rdf-hist} quantifies this effect for all potent
 
 
 
-\subsection{Vulnerability Discovery Tool Evaluation}
+%\subsection{Vulnerability Discovery Tool Evaluation}
 
-And something needs to go here when we get it from NEU who is doing the eval.
+%And something needs to go here when we get it from NEU who is doing the eval.
 
 
 
