--- a/paper1/implementation.tex
+++ b/paper1/implementation.tex
@@ -29,12 +29,15 @@ Third, it integrates, from S2E~\cite{S2E}, the ability to lift QEMU's intermedia
 The main feature of PANDA used by LAVA is a fast and robust dynamic taint analysis plugin that works upon the LLVM version of each 
 basic block of emulated code.
 This LLVM version includes emulated versions of every x86 instruction that QEMU supports.
+QEMU often implements tricky processor instructions (e.g. MMX and XMM on x86) in C code.
+These are compiled to LLVM bitcode using Clang, and, thereby made available for taint analysis by PANDA.
 LAVA employes a simple PANDA plugin \verb+file_taint+ that is able to apply taint labels to bytes read from files in Linux.
-This plugin, in turn, leverages operating system introspection and system call plugins in PANDA to determine the start file offset of the read as well as the number of byte actually read.
+This plugin, in turn, leverages operating system introspection and system call plugins in PANDA to determine the start file offset of the read as well as the number of bytes actually read.
 This is how LAVA can make use of taint information that maps internal program quantities back to file offsets.  
 % PANDA tracks taint between processes and the kernel.
 Before running a target program under PANDA, LAVA first invokes a Clang plugin to insert taint queries into the source before and after function calls.
 Each function argument is deconstructed into constituent lvals, and, for each, Clang adds a taint query as a \emph{hypervisor call} which notifies PANDA to query the taint system about a specific source-level variable.
+The function return value also gets a taint query hypercall.
 LAVA also uses Clang to insert source hypervisor calls at potential attack points.
 
 \subsection{Running the program}
@@ -62,12 +65,12 @@ When an attack point is encountered, all currently viable DUAs are considered as
 We then analyze the pandalog in temporal order, matching up DUAs with attack points to find potentially injectable bugs.
 The program that does this is called \verb+FIB+ for ``find injectable bugs'', and is detailed in Figure~\ref{alg:fib}.
 \verb+FIB+ considers the pandalog entries in temporal order.
-Taint query results in the function \verb+collect_duas+ in order for \verb+FIB+ to maintain a set of currently viable DUAs.
+Taint query entries are handled by the function \verb+collect_duas+ which maintains a set of currently viable DUAs.
 Viable DUAs must have enough tainted bytes, and those bytes must be below some threshold for taint set cardinality and TCN.
 Additionally, the liveness associated with all the input bytes which taint the DUA must be below a threshold.
 Note that a DUA is associated with a specific program point and variable name, and only the last encountered DUA is retained in the viable set. 
-This means that, if a DUA is a variable in a loop or in a function that is called many times, the set will only have one entry (the last) for that variable and source location, thus ensuring that value is up to date and potentially usable.  
-Tainted branch information in the pandalog updates liveness for all input byte involved, in the function \verb+update_liveness+.
+This means that, if a DUA is a variable in a loop or in a function that is called many times, the set will only have one entry (the last) for that variable and source location, thus ensuring that value is up to date and potentially usable at an attack point.  
+Tainted branch information in the pandalog updates liveness for all input bytes involved, in the function \verb+update_liveness+.
 When \verb+FIB+ encounters an attack point in the pandalog, the function \verb+collect_bugs+ considers each DUA in the set,
 and, those that are still viable with respect to liveness, are paired with the attack point as a potentially injectable bugs.
 In the current implementation of LAVA, an attack point is an argument to a function call that can be \emph{made vulnerable by adding a DUA to it}.
@@ -96,4 +99,4 @@ At the attack point, an argument to a function call, we insert code that retriev
 The final step in LAVA is simply compiling and testing the modified program on a proof-of-concept input file, in which the input file bytes indicated as tainting the DUA have been set to the correct value.
 An example of the pair of source code insertions plus the file modifiction in order to inject a bug into the program \verb+file+ can be seen in Figures~\ref{src:dua-siphon}, and~\ref{src:dua-use}.
 The original input to \verb+file+ was the binary \verb+/bin/ls+, and the required modification to that file is to simply set its first four bytes to the string 'lava' to trigger the bug. 
-
+Note that the taint analysis and FIB identifies a DUA in one compilation unit and an attack point in another compilation unit.  
