--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -19,9 +19,9 @@ Various program and dynamic trace statistics are reported as well as DUA, attack
 
 %We evaluated LAVA in three ways.
 We evaluated LAVA in two ways.
-First, we injected large numbers of bugs into five open source programs: file, readelf (from binutils), bash, and tshark (command-line verison of Wireshark). %, and eog (aka Eye of GNOME, an image viewer).
+First, we injected large numbers of bugs into four open source programs: file, readelf (from binutils), bash, and tshark (command-line verison of Wireshark). %, and eog (aka Eye of GNOME, an image viewer).
 For each of these, we report various statistics with respect to both the target program and also LAVA's success at injecting bugs.
-Second, we evaluated the realism of LAVA's bugs by proposing and computing some measures.
+Second, we evaluated the distribution and realism of LAVA's bugs by proposing and computing various measures.
 %Third, we randomly sampled 20 injected bugs for each of these programs and used these to measure detection rates for two commercial and two open source bug finders.
 
 \subsection{Injection Experiments}
@@ -35,10 +35,10 @@ The input to \verb+tshark+ was a 16K packet capture file from a site hosting a n
 The input to \verb+bash+ was a 124-line shell script written by the authors.
 % TRL -- removed this since table was too big and I wanted to add bug inj time
 %The number of sequential and unique basic blocks in the PANDA trace for each program are reported as N(BBs) and N(BBu).
-$N(DUA)$ and $N(ATP)$ are the number of DUAs and attack points collected in the LAVA database by the FIB analysis.
+$N(DUA)$ and $N(ATP)$ are the number of DUAs and attack points collected by the FIB analysis.
 Note that, in order for a DUA or attack point to be counted, it must have been deemed viable for some bug, as described in Section~\ref{sec:mining}.
 The columns \emph{Potential Bugs} and \emph{Validated Bugs} in Table~\ref{table:insertion-results} give the numbers of both potential bugs found by FIB, but also those verified to actually return exitcodes indicating a buffer overflow (-11 for segfault or -6 for heap corruption) when run against the modified input.
-The penultimate column in the table is \emph{Yield} which is the fraction of potential bugs what were validated to be actual buffer overflows.   
+The penultimate column in the table is \emph{Yield} which is the fraction of potential bugs what were tested and determined to be actual buffer overflows.   
 The last column gives the time required to test a single potential bug injection for the target.
 
 
@@ -57,7 +57,7 @@ We did not encounter any situation in which the original input caused an overflo
 \begin{tabular}{l|l|l|l|l} 
        & \multicolumn{3}{c}{$mLIV$} &  \\  
 $mTCN$ &         $[0,10)$ & $[10,100)$ & $[100,1000)$ & $[1000,+\inf]$ \\  \hline 
-$[0,10)$ &       0.519    & 0.229      & 0.174        & 0.119          \\
+$[0,10)$ &       51.9\%   & 22.9\%     & 17.4\%       & 11.9\%          \\
 $[10,100)$ &     --       & 0          & 0            & 0     \\
 $[100,+\inf]$ &  --       & --         & --           & 0     \\ 
 \end{tabular}
@@ -67,37 +67,35 @@ Cells for which there were no samples are indicated with the contents '--'.}
 \label{table:yield-breakdown}
 \end{table}
 
-Yield varies considerably from a 9.6\% to over 50\%.
+Yield varies considerably from less than 10\% to over 50\%.
 To understand this better, we investigated the relationship between our two taint-based measures and yield.
-For each DUA used to inject a bug, we determined $mTCN$, the maximum TCN for any of its bytes and $mLIV$, the maximum liveness for any label in any taint set associated with one of its bytes.  
+For each DUA used to inject a bug, we determined $mTCN$, the maximum TCN for any of its bytes and $mLIV$, the maximum liveness for any label in any taint label set associated with one of its bytes.  
 More informally, $mTCN$ represents how complicated a function of the input bytes a DUA is, and $mLIV$ is a measure of how much the control flow of a program is influenced by the input bytes that determine a DUA.
 Table~\ref{table:yield-breakdown} is a two-dimensional histogram with the bins for $mTCN$ intervals along the vertical axis and bins for $mLIV$ along the horizontal axis.
 The top-left cell of this table represents all bug injections for which $mTCN<10$ and $mLIV<10$, and the bottom-right cell is all those for which $mTCN>=1000$ and $mLIV>=1000$.
 Recall that, when  $mTCN=mLIV=0$, the DUA is not only a direct copy of input bytes, but also, those input bytes have not been observed to be used in deciding any program branches. 
 As either $mTCN$ or $mLIV$ increase, yield deteriorates.  
-
+However, we were surprised to observe that $mLIV$ values of over 1000 still gave yield in the 10\% range.
 
 \subsection{Bug Distribution}
 
 It would appear as though LAVA can inject a very large number of bugs.  
-If we extrapolate from yield numbers in Table~\ref{table:insertion-results}, we estimate there are over 400,000 real bugs.
+If we extrapolate from yield numbers in Table~\ref{table:insertion-results}, we estimate there would be over 400,000 real bugs if all were tested.
 
+\vspace{.1in}
   $ 0.387 \times 17518 + 0.096 \times 447645 + 0.532 \times 276367 \\
    + 0.177 \times 1240777 \approx 416398 $ 
+\vspace{0.1in}
 
 \noindent
 But how well distributed is this set of bugs? 
 For programs like \verb+file+ and \verb+bash+, between 11 and 44 source files  are involved in a potential bug.
 In this case, the bugs appear to be fairly well distributed, as those numbers represent 58\% and 31\% of the total for each, respectively.
-On the other hand, \verb+readelf+ and \verb+tshark+ fare worse, with only 2 and 122 source files found to involve a potential bug for each (0.87\% and 8.2\% of source files).
-For \verb+readelf+ there appear to be two issues. 
-First, we over-estimate the number of source files for this program, since we include all of binutils.
-The second issue 
+On the other hand, \verb+readelf+ and \verb+tshark+ fare worse, with only 2 and 122 source files found to involve a potential bug for each (16.7\% and 8.2\% of source files).
 For \verb+tshark+, much of the code for which is devoted to parsing esoteric network protocols, coverage is probably the issue since we use only a single input.
 Similiary, we only use a single hand-written script with \verb+bash+, with little attempt to cover a majority of language features.
-
+We are unsure why so few of the source files in \verb+readelf+ involve a potential bug.
  
-
 
 \subsection{Bug Realism}
 
@@ -113,7 +111,7 @@ Thus, it is crucial that they be realistic in some sense.
 Realism is, however, difficult to assess.
 We examined three aspects of our injected bugs as measures of realism. 
 The first two are DUA and attack point position within the program trace, which are depicted in Figure~\ref{fig:dua-atp-trace}.
-That is, we determined the fraction of trace instructions executed at the point the DUA is siphoned off and at the point it is used to attack the program by corrupting a pointer.
+That is, we determined the fraction of trace instructions executed at the point the DUA is siphoned off and at the point it is used to attack the program by corrupting an internal program value.
 Histograms for these two quantities, $I(DUA)$ and $I(ATP)$, are provided in Figures~\ref{fig:dua-hist} and~\ref{fig:atp-hist}, where counts are for all potential bugs in the LAVA database for all five open source programs. 
 DUAs and attack points are clearly available at all points during the trace, although there appear to be more at the beginning and end.
 This is important, since bugs created using these DUAs have entirely realistic control and data-flow all the way up to $I(DUA)$.
