--- a/paper1/biblio.bib
+++ b/paper1/biblio.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Hulin, Patrick - 0559 - MITLL at 2015-10-08 14:53:04 -0400 
+%% Created for Patrick Hulin at 2015-10-09 15:37:30 -0400 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@url{Keromytis:2015,
+	Author = {Keromytis et al.},
+	Date-Added = {2015-10-09 19:33:48 +0000},
+	Date-Modified = {2015-10-09 19:35:25 +0000},
+	Lastchecked = {October 9, 2015},
+	Month = {August},
+	Title = {Tunable Cyber Defnsive Security Mechanisms},
+	Url = {https://www.sbir.gov/sbirsearch/detail/825791},
+	Year = {2015}}
 
 @inproceedings{S2E,
 	Author = {Chipounov, Vitaly and Kuznetsov, Volodymyr and Candea, George},
@@ -148,7 +158,6 @@
 	Bdsk-Url-1 = {http://doi.acm.org/10.1145/1029894.1029911},
 	Bdsk-Url-2 = {http://dx.doi.org/10.1145/1029894.1029911}}
 
-
 @webpage{Tsyrklevich:2015,
 	Author = {Vlad Tsyrklevich},
 	Date-Modified = {2015-10-08 17:53:55 +0000},
@@ -161,8 +170,7 @@
 	Bdsk-Url-1 = {https://tsyrklevich.net/2015/07/22/hacking-team-0day-market/}}
 
 @inproceedings{Kratkiewicz:2005,
-  title={Using a diagnostic corpus of C programs to evaluate buffer overflow detection by static analysis tools},
-  author={Kratkiewicz, Kendra and Lippmann, Richard},
-  booktitle={Proc. of Workshop on the Evaluation of Software Defect Detection Tools},
-  year={2005}
-}
+	Author = {Kratkiewicz, Kendra and Lippmann, Richard},
+	Booktitle = {Proc. of Workshop on the Evaluation of Software Defect Detection Tools},
+	Title = {Using a diagnostic corpus of C programs to evaluate buffer overflow detection by static analysis tools},
+	Year = {2005}}
