fixed some stale numbers

--- a/paper1/results.tex
+++ b/paper1/results.tex
@@ -5,11 +5,11 @@
 \begin{tabular}{c|c|c|c|c|c|c|c|c|c|c} 
         &         & Num       & Lines     &        &        & Potential & Validated  &         & Inj Time \\
 Name    & Version & Src Files & C code    & N(DUA) & N(ATP) & Bugs      & Bugs       & Yield   & (sec)  \\\hline
-file    & 5.22    & 19        & 10809     & 631    & 114    & 17518     & 774        & 38.7\%  & 16         \\  %    files verified.  sloc recomputed
+file    & 5.22    & 19        & 10809     & 631    & 114    & 17518     & 774        & 39.0\%  & 16         \\  %    files verified.  sloc recomputed
 %eog    & 3.4.2   &           & 22997     &        &        &           &            &         &         \\ 
 readelf & 2.25    & 12        & 21052     & 3849   & 266    & 276367    & 1064       & 53.4 \% & 354     \\  % time verified.  files verified. sloc recomputed
-bash    & 4.3     & 143       & 98871     & 3832   & 604    & 447645    & 192        & 9.6\%   & 153     \\  % time verified.  
-tshark  & 1.8.2   & 1272      & 2186252   & 9853   & 1037   & 1240777   & 354        & 17.7\%  & 542     \\
+bash    & 4.3     & 143       & 98871     & 3832   & 604    & 447645    & 192        & 9.5\%   & 153     \\  % time verified.  
+tshark  & 1.8.2   & 1272      & 2186252   & 9853   & 1037   & 1240777   & 354        & 15.3\%  & 542     \\
 \end{tabular} 
 \caption{LAVA Injection results for open source programs of various sizes.
 For each, a single input file was used to perform a taint analysis with PANDA.
@@ -80,11 +80,11 @@ However, we were surprised to observe that $mLIV$ values of over 1000 still gave
 \subsection{Bug Distribution}
 
 It would appear as though LAVA can inject a very large number of bugs.  
-If we extrapolate from yield numbers in Table~\ref{table:insertion-results}, we estimate there would be over 400,000 real bugs if all were tested.
+If we extrapolate from yield numbers in Table~\ref{table:insertion-results}, we estimate there would be almost 400,000 real bugs if all were tested.
 
 \vspace{.1in}
-  $ 0.387 \times 17518 + 0.096 \times 447645 + 0.532 \times 276367 \\
-   + 0.177 \times 1240777 \approx 416398 $ 
+  $ 0.390 \times 17518 + 0.095 \times 447645 + 0.534 \times 276367 \\
+   + 0.153 \times 1240777 \approx 386777 $ 
 \vspace{0.1in}
 
 \noindent
