--- a/paper1/overview.tex
+++ b/paper1/overview.tex
@@ -30,7 +30,7 @@ That taint analysis has a few important features.
 
 \begin{itemize}
 \item Each byte in the input is given its own label.
-Thus, if an internal program quantity is tainted and a direct copy of input bytes, then we can map that quantity back to a specific part of the input.  
+Thus, if an internal program quantity is tainted and is a direct copy of input bytes, then we can map that quantity back to a specific part of the input.
 \item The taint analysis is as complete and correct as possible.  
 All program code including library and kernel is subject to taint analysis.
 Multiple threads and processes are also handled correctly, so that taint is flows are not lost..
